--- a/main_app/templates/flowers/detail.html
+++ b/main_app/templates/flowers/detail.html
@@ -1,23 +1,59 @@
 {% extends 'base.html' %} {% block content %}
 
 <h1>Flower Details</h1>
-
-<div class="card">
-    <div class="card-content">
-        <span class="card-title">{{ flower.name }}</span>
-        <p>Scientific Name: {{ flower.name }}</p>
-        <img class="flower-img" src="{{ flower.img }}" alt="{{ flower.common_name }}" height=150px style="border-radius:5px;"/>
-        <p>Type: {{ flower.type }}</p>
-        <p>Color: {{ flower.color }}</p>
-        <p>Petal Number: {{ flower.petal }}</p>
-        <p>Size: {{ flower.size }} inches</p>
-        <p>Leaf Arrangement: {{ flower.leaf_arrangement }}</p>
-        <p>Habitat: {{ flower.habitat }}</p>   
+<div class="row">
+    <div class="col s6">
+        <div class="card">
+            <div class="card-content">
+                <span class="card-title">{{ flower.name }}</span>
+                <p>Scientific Name: {{ flower.name }}</p>
+                <img class="flower-img" src="{{ flower.img }}" alt="{{ flower.common_name }}" height=150px style="border-radius:5px;"/>
+                <p>Type: {{ flower.type }}</p>
+                <p>Color: {{ flower.color }}</p>
+                <p>Petal Number: {{ flower.petal }}</p>
+                <p>Size: {{ flower.size }} inches</p>
+                <p>Leaf Arrangement: {{ flower.leaf_arrangement }}</p>
+                <p>Habitat: {{ flower.habitat }}</p>   
+            </div>
+            <div class="card-action">
+                <a href="{% url 'flowers_update' flower.id %}">Edit</a>
+                <a href="{% url 'flowers_delete' flower.id %}">Delete</a>
+            </div>
+        </div>
     </div>
-    <div class="card-action">
-        <a href="{% url 'flowers_update' flower.id %}">Edit</a>
-        <a href="{% url 'flowers_delete' flower.id %}">Delete</a>
+    <div class="col s6">
+        <form action="{% url 'add_sighting' flower.id %}" method="post">
+            {% csrf_token %}{{ sighting_form.as_p }}
+            <input type="submit" class="btn" value="Add Sighting" />
+        </form>
+        <table class="striped">
+            <thead>
+                <tr>
+                <th>Sighting Date</th>
+                <th>Location</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for sighting in flower.sighting_set.all %}
+                <tr>
+                <td>{{sighting.date}}</td>
+                <td>{{sighting.location}}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
 </div>
+<script>
+    var dateEl = document.getElementById('id_date');
+    M.Datepicker.init(dateEl, {
+        format: 'yyyy-mm-dd',
+        defaultDate: new Date(),
+        setDefaultDate: true,
+        autoClose: true
+    });
 
+    var selectEl = document.getElementById('id_location');
+    M.FormSelect.init(selectEl);
+</script>
 {% endblock %}
