admin, 3 models, many-on, many-many

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -32,7 +32,8 @@
             <li><a href="{% url 'about' %}">About</a></li>
             <li><a href="{% url 'flowers_create' %}">Add a Flower</a></li>
             <li><a href="{% url 'index' %}">View All Flowers</a></li>
-            
+            <li><a href="{% url 'uses_index' %}">View Use Tags</a></li>
+            <li><a href="{% url 'uses_create' %}">Add New Use Tag</a></li>
           </ul>
         </div>
       </nav>
