--- a/main_app/templates/flowers/detail.html
+++ b/main_app/templates/flowers/detail.html
@@ -44,6 +44,48 @@
         </table>
     </div>
 </div>
+<hr />
+<div class="row">
+    <div class="col s6">
+        <h3>{{ flower.name }}'s Tags</h3>
+        {% if flower.uses.count %} {% for use in flower.uses.all %}
+        <div class="card">
+        <div class="card-content">
+            <span class="card-title">
+                <h4>{{ use.name }}</h4>
+                <p>{{ use.use }}</p>
+            </span>
+        </div>
+        </div>
+        {% endfor %} {% else %}
+        <h5>No Use Tags Added</h5>
+        {% endif %}
+    </div>
+    <!-- Available toys will come after this line -->
+    <div class="col s6">
+        <h3>Available Use Tags</h3>
+        {% if uses.count %}
+        {% for use in uses.all %}
+            <div class="card">
+                <div class="card-content">
+                    <span class="card-title">
+                        <h4>{{ use.name }}</h4>
+                        <p>{{ use.use }}</p>
+                    </span>
+                </div>
+                <div class="card-action">
+                    <form action="{% url 'assoc_use' flower.id use.id %}" method="post">
+                        {% csrf_token %}
+                        <button type="submit" class="btn">Add</button>
+                    </form>
+                </div>
+            </div>
+        {% endfor %}
+        {% else %}
+            <h5>{{flower.name}} Already Has All Use Tags</h5>
+        {% endif %}
+    </div> 
+</div>
 <script>
     var dateEl = document.getElementById('id_date');
     M.Datepicker.init(dateEl, {
