--- a/main_app/templates/main_app/use_form.html
+++ b/main_app/templates/main_app/use_form.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block content %} {% if object %}
 <h1>Update {{ object.name }}</h1>
 {% else %}
-<h1>Add Use</h1>
+<h1>Add Tag</h1>
 {% endif %}
 
 <form action="" method="post">
