--- a/main_app/templates/uses/detail.html
+++ b/main_app/templates/uses/detail.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %} {% block content %}
 
-<h1>Uses Details</h1>
+<h1>Tags Details</h1>
 
 <div class="card">
     <a href="{% url 'uses_detail' use.id %}">
         <div class="card-content">
-        <span class="card-title"
-            >A
-            <span class="{{ use.name.lower }}-text">{{ use.name }}</span>
-            {{use.use}}</span
+        < class="card-title"
+            >
+            <span class="{{ use.name.lower }}-text">{{ use.name }}</span><br/>
+            Description:{{use.use}}</span
         >
         </div>
         <div class="card-action">
