--- a/main_app/templates/uses/index.html
+++ b/main_app/templates/uses/index.html
@@ -1,14 +1,15 @@
 {% extends 'base.html' %} {% block content %}
 
-<h1>Uses List</h1>
+<h1>Tags List</h1>
 
 {% for use in object_list %}
 <div class="card">
     <a href="{% url 'uses_detail' use.id %}">
         <div class="card-content">
         <span class="card-title"
-            >A
-            <span class="{{use.name}}-text">{{use.name}}</span> {{use.use}}</span
+            >
+            <span class="{{use.name}}-text">{{use.name}}</span><br/>
+            Description: {{use.use}}</span
         >
         </div>
     </a>
