added logic and login/logout routes

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -30,10 +30,15 @@
           </ul>
           <ul class="right">
             <li><a href="{% url 'about' %}">About</a></li>
+            {% if user.is_authenticated %}
             <li><a href="{% url 'flowers_create' %}">Add a Flower</a></li>
             <li><a href="{% url 'index' %}">View All Flowers</a></li>
             <li><a href="{% url 'uses_index' %}">View Flower Tags</a></li>
             <li><a href="{% url 'uses_create' %}">Add New Flower Tag</a></li>
+            <li><a href="{% url 'logout' %}">Logout</a></li>
+            {% else %}
+            <li><a href="{% url 'login' %}">Login</a></li>
+            {% endif %}
           </ul>
         </div>
       </nav>
